# phidown

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_SETUP.md  Dockerfile  LICENSE  Makefile  Makefile.docs  README.md  down.py  down.sh  how_to_start.ipynb  install.sh  interactive_polygon_tool.ipynb  logfile  main.sh  paper.bib  paper.md  pyproject.toml  readme.md  test-ci-build.sh  test-docs-build.sh  test.ipynb  usage.ipynb  verify-docs.sh
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml  tests.yml
assets/: record.mov
docs/: README.md  REFINEMENT_SUMMARY.md  ais_guide.md  release_0.1.25.md  release_0.1.27.md  requirements.txt
docs/api/: README.md  download-api.md  parser-api.md  search-api.md
docs/attributes/: README.md  sentinel-1-attributes-reference.md
docs/data-schemas/: README.md  product-types.md  sentinel-1-attributes.md  swath-configurations.md
docs/source/: ais_guide.rst  api_reference.rst  burst_mode.rst  ccm_reference.rst  changelog.rst  cli.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  installation.rst  landsat8_reference.rst  phisat2_reference.rst  sentinel1_burst_mode.rst  sentinel1_reference.rst  sentinel2_reference.rst  sentinel3_reference.rst  user_guide.rst
docs/source/_static/: custom.css
docs/src/: S1_SAR_SLC_attribute_possible_values.csv  S2_SAR_SLC_attribute_possible_values.csv  S3_SAR_RAW_SLC_attribute_possible_values.csv  S3_SAR_SLC_attribute_possible_values.csv  S4_SAR_SLC_attribute_possible_values.csv  S5_SAR_SLC_attribute_possible_values.csv  S6_SAR_SLC_attribute_possible_values.csv  SAR_RAW_SLC_attribute_possible_values.csv  SAR_SLC_generic_attribute_possible_values.csv
docs/user-guides/: attribute-analysis.md  data-retrieval.md  getting-started.md
examples/: ais_example.py  burst_mode_example.py  config.yaml  insar.md  insar.py  test_search.py
notebooks/: 10_phisat2_search_download.ipynb  11_phisat2_s2_l1c_coupling.ipynb  1_search_n_download.ipynb  2_interactive_polygon_tool.ipynb  2_interactive_polygon_tool_clean.ipynb  3_interesect_S2_S1.ipynb  4_sar_ais_example.ipynb  4_sar_and_ais_integration.ipynb  5_quick_sar_ais_example.ipynb  5_slc_grd_raw_s1_matcher.ipynb  6_burst_search_examples.ipynb  7_Beirut_CCD_bursts.ipynb  8_insar_processing_validation.ipynb  9_s1_s2_s3_thor_workflow.ipynb  README.md  phidown.ipynb  phisat_list.csv  s5cmd_utils.ipynb  sentinel2a_night_imaging_products.csv  sentinel2a_night_imaging_products.gpkg  sentinel2a_night_imaging_products_summary.json
phidown/: __init__.py  ais.py  cli.py  config.json  down_2.py  download_state.py  downloader.py  insar_workflow.py  interactive_tools.py  native_download.py  phisat2.py  s5cmd_utils.py  search.py  skill_cli.py  viz.py
plugins/phidown/.codex-plugin/: plugin.json
plugins/phidown/skills/phidown/: SKILL.md
plugins/phidown/skills/phidown/agents/: openai.yaml
skills/phidown/: SKILL.md
skills/phidown/references/: commands.md
tests/: conftest.py  test_ais.py  test_ais_download.py  test_all_parameters_comprehensive.py  test_attributes.py  test_basemap_switching.py  test_burst_mode.py  test_cli.py  test_cli_extended.py  test_comprehensive_categorical.py  test_comprehensive_params.py  test_download_state.py  test_find_working_params.py  test_insar_workflow.py  test_interactive_tools.py  test_interactive_tools_unit.py  test_multiple_dates.py  test_native_download.py  test_network_timeouts.py  test_opensearch_correct_params.py  test_package_init.py  test_pagination.py  test_phisat2.py  test_s1_slc_burst.py  test_s5cmd_utils.py  test_search.py  test_search_download_product.py  test_sentinel2_level_aliases.py  test_skill_cli.py  test_time_validation.py  test_token_manager.py  test_viz.py
