[project]
name = "phidown"
version = "0.1.19"
description = "A project using AWS services and dataset tools for Sentinel data"
authors = [
  { name = "Roberto Del Prete", email = "roberto.delprete@esa.int" }
]

dependencies = [
  "pandas>=1.5.2",        # keep as is, already minimum version
  "ipyleaflet>=0.19.2", 
  "s5cmd",
]

requires-python = ">=3.9"
license = { text = "GPLv3" }

[project.optional-dependencies]
ais = [
  "shapely>=1.8.0,<2.0.0",  # Use 1.x for Python 3.9 compatibility
  "pyarrow",
  "huggingface-hub>=0.16.0,<1.0.0",  # More conservative version range
]
viz = [
  "ipywidgets>=8.1.6",
  "folium>=0.18.0",
]
dev = [
  "pytest>=7.0.0,<9.0.0",  # More conservative range
  "pytest-mock>=3.10.0",
  "flake8>=6.0.0,<8.0.0",  # More conservative range
]
docs = [
  "sphinx>=7.0.0,<8.0.0",  # Use 7.x for better compatibility
  "sphinx-rtd-theme>=1.3.0,<4.0.0",
  "sphinx-autodoc-typehints>=1.24.0,<3.0.0",  # Compatible with Python 3.9
  "myst-parser>=3.0.0,<4.0.0",  # Use 3.x for compatibility
  "sphinx-copybutton>=0.5.0",
  "sphinx-autoapi>=2.5.0,<4.0.0",  # More conservative range
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["phidown/**"]

[tool.pdm.sdist]
# Include all files for source distribution
includes = ["phidown/**", "README.md", "LICENSE"]

[tool.pdm.wheel]
# Universal wheel (pure Python, no platform-specific code)
universal = true