[project]
name = "phidown"
version = "0.1.26"
description = "Get access to Copernicus data with a pythonic easy interface. Get your products in seconds not in months."
authors = [
  { name = "Roberto Del Prete", email = "roberto.delprete@esa.int; robertodelprete88@gmail.com" }
]

dependencies = [
  "pandas>=1.5.2",
  "boto3>=1.34.0",
  "s5cmd",
  "tqdm>=4.65.0",
  "pyyaml>=6.0.0",
  "requests>=2.32.5",
]

requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[project.scripts]
phidown = "phidown.cli:main"

[project.optional-dependencies]
jupyter_env = [
  "ipykernel>=6.30.1",
  "jupyterlab-widgets>=3.0.15",
  "jupyter-leaflet>=0.20.0",
  "ipywidgets>=8.1.6",
]
ais = [
  "shapely>=2.0.0",  # Use 2.x for Python 3.12 compatibility
  "pyarrow>=21.0.0", 
  "huggingface-hub>=0.35.0", 
]
viz = [
  "leafmap[maplibre]>=0.52.2",
  "localtileserver>=0.10.6",
  "setuptools>=80.9.0",
  "ipyleaflet>=0.19.2", 
  "leafmap>=0.52.2",
  "xarray>=2024.7.0",
  "folium>=0.18.0",
  "rasterio>=1.4.3",
  "matplotlib>=3.9.4",
]
dev = [
  "pytest>=7.0.0,<9.0.0",  # More conservative range
  "pytest-mock>=3.10.0",
  "flake8>=6.0.0,<8.0.0",  # More conservative range
]
test = [
  "pytest>=7.0.0,<9.0.0",
  "pytest-mock>=3.10.0",
  "folium>=0.18.0",
  "huggingface-hub>=0.35.0",
  "ipyleaflet>=0.19.2",
  "ipywidgets>=8.1.6",
  "shapely>=2.0.0",
]
docs = [
  "sphinx>=7.0.0,<8.0.0",  # Use 7.x for better compatibility
  "sphinx-rtd-theme>=1.3.0,<4.0.0",
  "sphinx-autodoc-typehints>=1.24.0,<3.0.0",  # Compatible with Python 3.9
  "myst-parser>=3.0.0,<4.0.0",  # Use 3.x for compatibility
  "sphinx-copybutton>=0.5.0",
  "sphinx-autoapi>=2.5.0,<4.0.0",  # More conservative range
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
# Package only source and required config files; avoid bundling local downloaded data (e.g. *.SAFE folders).
includes = ["phidown/*.py", "phidown/**/*.py", "phidown/config.json"]

[tool.pdm.sdist]
# Keep source distributions lean and reproducible.
includes = ["phidown/*.py", "phidown/**/*.py", "phidown/config.json", "README.md", "LICENSE"]

[tool.pdm.wheel]
# Universal wheel (pure Python, no platform-specific code)
universal = true
